Updates saying header tekst find a way make a way added sub class in css file.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</div>
 		</nav>
 		<div class="hero-text-box">
-			<h1>There's not a<br> Problem I can't fix</h1>
+			<h1>find a way <div class="dash">&mdash; or &mdash;</div> make a way</h1>
 			<a class="btn btn-full js--scroll-to-wat-kan-ik" href="#">Wat kan ik ?</a>
 			<script type="text/javascript">
   document.write("<a class=\"btn btn-ghost\" href=\"ma" + "ilto:" + new Array("gmail.com","whitaker.mj").reverse().join("@") + "\">" + "Contact" + "</" + "a>");
