--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 	<header>
 		<nav>
 			<div class="row">
-				<img src="resources/img/logo-white.png" alt="OmniFood Logo" class="logo">
-				<img src="resources/img/logo.png" alt="OmniFood Logo" class="logo-black">
+				<img src="resources/img/logo-white.png" alt="SilverLine Logo" class="logo">
+				<img src="resources/img/logo.png" alt="SilverLine Logo" class="logo-black">
 				<ul class="main-nav js--main-nav">
-					<li><a href="#html-css">HTML5 & CSS3</a></li>
-					<li><a href="#php-section">php</a></li>
+					<li><a href="#MSCD">Microsoft Certified Solution Developer</a></li>
 					<li><a href="#powershell">powershell</a></li>
+					<li><a href="#html-css">HTML5 & CSS3</a></li>
 					<li><a href="#python">Python</a></li>
-					<li><a href="#java">java</a></li>
+					<li><a href="#php-section">php</a></li>
 				</ul>
 				<a class="mobile-nav-icon"><i class="ion-navicon-round js--nav-icon"></i></a>
 			</div>
@@ -105,6 +105,80 @@
 		</ul>
 
 	</section>
+
+	<section class="section-steps" id="MSCD">
+		<div class="row">
+			<h2>
+					Microsoft Certified Solution Developer
+			</h2>
+		</div>
+		<div class="row">
+			<div class="col span-1-of-2 steps-box">
+				<img src="resources/img/mscdMJW.png" alt="html example" class="app-screen js--wp2">
+			</div>
+			<div class="col span-1-of-2 steps-box">
+				<div class="works-step">
+
+						<p>Sinds kort ben ik Microsoft Certified Solution Developer, App's: met name web apps en web serivces kan ik ontwillelen binnen visual studio in no time. Momenteel ben ik voorbeeld web app aan het schrijven om jou als werkgever een voorbeeld voor te schotelen waar je van zult smullen! Watch this space voor de techische demo in een paar weken tijd!</p>
+
+
+				</div>
+				<div class="works-step">
+					<div>1</div>
+					<p>Rappid application development binnen visual studio geeft de mogenlijk om zeer snel applicaties te ontwikkelen en aanpassening en op bestaande code te maken.
+					</p>
+				</div>
+				<div class="works-step">
+					<div>2</div>
+					<p> Platform onafhangkelijk: Door gebruik te maken van dot net core is het mogelijk om op veel meer platformen dan voor heen applicatie te ontwikkelen. Zo heb ik de de voorbeeld web app welke ik momenteel aan het ontwikkelen ben op een raspberry pi draaien! Dat ik micosoft code op een arm processor welke draait unubtu draait! Te Gek!	</p>
+				</div>
+				<div class="works-step">
+					<div>3</div>
+					<p>Trustwothy, veel overheden vertrouwen op microsoft producten en doordat zij snel op veiligheids lekken inspringen en patchen bent u ook snel 'gepatched' door de de dot net framework hiet op afsteunt.
+					</p>
+				</div>
+
+			</div>
+		</div>
+
+	</section>
+
+	<section class="section-cities" id="powershell">
+				<div class="row">
+			<h2>
+					powershell
+			</h2>
+		</div>
+		<div class="row">
+			<div class="col span-1-of-2 steps-box">
+				<img src="resources/img/powershellExampleMW.png" alt="html example" class="app-screen js--wp4">
+			</div>
+			<div class="col span-1-of-2 steps-box">
+				<div class="works-step">
+
+						<p> Good ol'Powershell als je het nodig bent is hij er voor je. De oude makker waar je op terug kunt vallen als de rest het niet meer doet. Ik heb veel in powershell geschreven oa server monitoren met realtime display maar ook scomm plugins etc.</p>
+
+				</div>
+				<div class="works-step">
+					<div>1</div>
+					<p>Makkelijk om te leren, beheren.</p>
+				</div>
+				<div class="works-step">
+					<div>2</div>
+					<p>Op alle moderne windows bakken beschikbaar. Alleen op en linux omgeving wordt het een beetje lastig.
+					</p>
+				</div>
+				<div class="works-step">
+					<div>3</div>
+					<p>Er is heel veel script-baar in powershell of het nou op VM-Ware, ADS of MS-SQL gaat bijna alle miscrosoft producten hebben wel een powershell plugin. Onwijs schaalbaar, dus.
+					</p>
+				</div>
+
+			</div>
+		</div>
+
+	</section>
+
 	<section class="section-steps" id="html-css">
 		<div class="row">
 			<h2>
@@ -177,41 +251,7 @@
 		</div>
 
 	</section>
-	<section class="section-cities" id="powershell">
-				<div class="row">
-			<h2>
-					powershell
-			</h2>
-		</div>
-		<div class="row">
-			<div class="col span-1-of-2 steps-box">
-				<img src="resources/img/powershellExampleMW.png" alt="html example" class="app-screen js--wp4">
-			</div>
-			<div class="col span-1-of-2 steps-box">
-				<div class="works-step">
 
-						<p> Good ol'Powershell als je het nodig bent is hij er voor je. De oude makker waar je op terug kunt vallen als de rest het niet meer doet. Ik heb veel in powershell geschreven oa server monitoren met realtime display maar ook scomm plugins etc.</p>
-
-				</div>
-				<div class="works-step">
-					<div>1</div>
-					<p>Makkelijk om te leren, beheren.</p>
-				</div>
-				<div class="works-step">
-					<div>2</div>
-					<p>Op alle moderne windows bakken beschikbaar. Alleen op en linux omgeving wordt het een beetje lastig.
-					</p>
-				</div>
-				<div class="works-step">
-					<div>3</div>
-					<p>Er is heel veel script-baar in powershell of het nou op VM-Ware, ADS of MS-SQL gaat bijna alle miscrosoft producten hebben wel een powershell plugin. Onwijs schaalbaar, dus.
-					</p>
-				</div>
-
-			</div>
-		</div>
-
-	</section>
 	<section class="section-steps" id="python">
 		<div class="row">
 			<h2>
@@ -251,42 +291,7 @@
 	</section>
 
 
-	<section class="section-cities" id="java">
-		<div class="row">
-			<h2>
-					JAVA
-			</h2>
-		</div>
-		<div class="row">
-			<div class="col span-1-of-2 steps-box">
-				<img src="resources/img/javaExampleMW.png" alt="html example" class="app-screen js--wp2">
-			</div>
-			<div class="col span-1-of-2 steps-box">
-				<div class="works-step">
 
-						<p>Hier ligt mijn persoonlijke ambitie de komende jaren. Op korte termijn wil ik me hierin laten certificeren. Onwijs interessant en ik geloof dat Java een toekomst vast taal is door zijn brede draagvlak en diversiteit aan platformen. Links zie je een kleinstukje en aan anagram generator welke ik gemaakt had om wordfoud oplossingen te maken. Ik de toekomst zal ik de gehele source code van de voorbeelden beschikbaar stellen voor geïnteresseerden.</p>
-
-				</div>
-				<div class="works-step">
-					<div>1</div>
-					<p>Java is ontworpen om makkelijk in het gebruik te zijn. Makkelijk om te schrijven compileren en te 'debuggen'.
-					</p>
-				</div>
-				<div class="works-step">
-					<div>2</div>
-					<p> Java is object georiënteerd. Maakt het mogelijk om modulaire en herbruikbare code te schrijven.
-					</p>
-				</div>
-				<div class="works-step">
-					<div>3</div>
-					<p>Platform onafhankelijk, letterlijk biljoenen devices gebruiken Java. Kijk maar naar Android devices, een en al Java.
-					</p>
-				</div>
-
-			</div>
-		</div>
-
-	</section>
 
 <!--
 	<section class="section-form">
@@ -355,7 +360,7 @@
 <script async src="https://cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
 <script async src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script async src="resources/js/script.js"></script>
-<script async src="vendors/js/jquery.waypoints.min.js"></script>	
+<script async src="vendors/js/jquery.waypoints.min.js"></script>
 </body>
 
 </html>
