optimized image for web download speed

--- a/index.html
+++ b/index.html
@@ -215,44 +215,8 @@
 		</div>
 
 	</section>
-	<section class="section-cities" id="php-section">
-				<div class="row">
-			<h2>
-					PHP
-			</h2>
-		</div>
-		<div class="row">
-			<div class="col span-1-of-2 steps-box">
-				<img src="resources/img/phpexempleMW.png" alt="html example" class="app-screen js--wp1">
-			</div>
-			<div class="col span-1-of-2 steps-box">
-				<div class="works-step">
 
-						<p>PHP is een generieke scripting taal welke voornamelijk gebruikt wordt om dynamische html pagina of andere web content te generen op de server. </p>
-
-				</div>
-				<div class="works-step">
-					<div>1</div>
-					<p>Super krachtig platform voor het generen van web content. Er zijn veel 'plugins' beschikbaar (bv PDF files genereren of grafieken) en anders maak je ze zelf met python.
-					</p>
-				</div>
-				<div class="works-step">
-					<div>2</div>
-					<p>Korte onwikkel tijd zorgt voor een snelle 'return of investment'.
-					</p>
-				</div>
-				<div class="works-step">
-					<div>3</div>
-					<p>Standaard ondersteuning van uit hosting providers. PHP worden vaak al standaard in een hosting pakket geleverd dus je betaalt er niets extra's voor.
-					</p>
-				</div>
-
-			</div>
-		</div>
-
-	</section>
-
-	<section class="section-steps" id="python">
+	<section class="section-cities" id="python">
 		<div class="row">
 			<h2>
 					Python
@@ -289,6 +253,45 @@
 		</div>
 
 	</section>
+
+	<section class="section-steps" id="php-section">
+				<div class="row">
+			<h2>
+					PHP
+			</h2>
+		</div>
+		<div class="row">
+			<div class="col span-1-of-2 steps-box">
+				<img src="resources/img/phpexempleMW.png" alt="html example" class="app-screen js--wp1">
+			</div>
+			<div class="col span-1-of-2 steps-box">
+				<div class="works-step">
+
+						<p>PHP is een generieke scripting taal welke voornamelijk gebruikt wordt om dynamische html pagina of andere web content te generen op de server. </p>
+
+				</div>
+				<div class="works-step">
+					<div>1</div>
+					<p>Super krachtig platform voor het generen van web content. Er zijn veel 'plugins' beschikbaar (bv PDF files genereren of grafieken) en anders maak je ze zelf met python.
+					</p>
+				</div>
+				<div class="works-step">
+					<div>2</div>
+					<p>Korte onwikkel tijd zorgt voor een snelle 'return of investment'.
+					</p>
+				</div>
+				<div class="works-step">
+					<div>3</div>
+					<p>Standaard ondersteuning van uit hosting providers. PHP worden vaak al standaard in een hosting pakket geleverd dus je betaalt er niets extra's voor.
+					</p>
+				</div>
+
+			</div>
+		</div>
+
+	</section>
+
+
 
 
 
