Gramaticale feedback verwerkt in de site.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <i class="ion-ios-checkmark icon-small-outline icon-big"></i>
                 <h3>GETTING THINGS DONE</h3>
                 <p>
-                    Mijn ondersteunende taken systeem (GTD) zorgt ervoor dan ik geen zaken laat vallen. Wanneer je iets aan me vraagt schrijf ik het op en komt het in mijn persoonlijke systeem zodat jij op aan kunt dat het ook tijdig uitgevoerd wordt.
+                    Mijn ondersteunende taken systeem (GTD) zorgt ervoor dan ik geen zaken laat vallen. Wanneer je iets aan me vraagt schrijf ik het op en komt het in mijn taken systeem zodat jij er op aan kunt dat het tijdig uitgevoerd wordt.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
@@ -128,7 +128,7 @@
             <div class="col span-1-of-2 steps-box">
                 <div class="works-step">
 
-                    <p>Sinds kort ben ik Microsoft Certified Solution Developer, App's: met name web apps en web serivces kan ik ontwillelen binnen visual studio in no time. Momenteel ben ik voorbeeld web app aan het schrijven om jou als werkgever een voorbeeld voor te schotelen waar je van zult smullen! Watch this space voor de techische demo in een paar weken tijd!</p>
+                    <p>Sinds kort ben ik Microsoft Certified Solution Developer, App's: met name web apps en web serivces kan ik ontwikkelen met visual studio in no time. Momenteel ben ik een demo web app aan het schrijven om jou als werkgever een voorbeeld voor te schotelen waar je van zult smullen! Watch this space voor de techische demo in een paar weken tijd!</p>
 
 
                 </div>
@@ -140,13 +140,11 @@
                 </div>
                 <div class="works-step">
                     <div>2</div>
-                    <p> Platform onafhangkelijk: Door gebruik te maken van dot net core is het mogelijk om op veel meer platformen dan voor heen applicatie te ontwikkelen. Zo heb ik de de voorbeeld web app welke ik momenteel aan het ontwikkelen ben op een raspberry pi draaien! Dat ik micosoft code op een arm processor welke draait unubtu draait! Te Gek!	</p>
+                    <p> Platform onafhankelijk: Door gebruik te maken van dot net core is het mogelijk om op veel meer platformen dan voor heen applicatie te ontwikkelen. Zo heb ik de voorbeeld web app welke ik momenteel aan het ontwikkelen ben op een raspberry pi draaien! De mogelijkheid om c# code op een ARM processor te draaien op ubuntu vind ik te gek!</p>
                 </div>
                 <div class="works-step">
                     <div>3</div>
-                    <p>
-                        Trustwothy, veel overheden vertrouwen op microsoft producten en doordat zij snel op veiligheids lekken inspringen en patchen bent u ook snel 'gepatched' door de de dot net framework hiet op afsteunt.
-                    </p>
+                    <p>Trustwothy, veel overheden vertrouwen op microsoft producten en omdat zij snel op veiligheidslekken inspringen en patchen bent u ook snel veilig doordat dot net framework hier op af steunt</p>
                 </div>
 
             </div>
@@ -172,19 +170,15 @@
                 </div>
                 <div class="works-step">
                     <div>1</div>
-                    <p>Makkelijk om te leren, beheren.</p>
+                    <p>Makkelijk om te leren en om te beheren. Met een scripting taal die meer mensen beheersen is er een groter draag vlak en is het meteen makkelijker om te onderhouden.</p>
                 </div>
                 <div class="works-step">
                     <div>2</div>
-                    <p>
-                        Op alle moderne windows bakken beschikbaar. Alleen op en linux omgeving wordt het een beetje lastig.
-                    </p>
+                    <p>Op alle moderne windows bakken beschikbaar. Alleen op en linux omgeving wordt het een beetje lastig.</p>
                 </div>
                 <div class="works-step">
                     <div>3</div>
-                    <p>
-                        Er is heel veel script-baar in powershell of het nou op VM-Ware, ADS of MS-SQL gaat bijna alle miscrosoft producten hebben wel een powershell plugin. Onwijs schaalbaar, dus.
-                    </p>
+                    <p>Er is heel veel script-baar in powershell of het nou op VM-Ware, ADS of MS-SQL gaat bijna alle miscrosoft producten hebben wel een powershell plugin. Onwijs schaalbaar, dus.</p>
                 </div>
 
             </div>
